# api.yaml
@@ -112,6 +112,26 @@ paths:
         500:
           description: Server error 
 
+  /api/acn/newsAndUpdates/getUserAllNewsAndUpdates:
+    get:
+      summary: Get all News and updates (blog post)
+      description: Get all News and updates (blog post)
+      responses:
+        200:
+          description: Success
+        500:
+          description: Server error 
+
+  /api/acn/newsAndUpdates/getUserANewsAndUpdates/:id:
+    get:
+      summary: Get a News and updates (blog post)
+      description: Get a News and updates (blog post)
+      responses:
+        200:
+          description: Success
+        500:
+          description: Server error 
+
   /api/testimony/getSectionActiveTestimonies/:value:
     get:
       summary: Get Testimonies form testifiers
